<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0          http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.outskirtslabs</groupId>
  <artifactId>trixnity-clj</artifactId>
  <version>0.0.1</version>
  <packaging>jar</packaging>
  <name>trixnity-clj</name>
  <description>A Clojure adapter for Trixnity, a Matrix SDK; Write matrix apps/bots in Clojure.</description>
  <url>https://github.com/outskirtslabs/trixnity-clj</url>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <kotlin.version>2.3.10</kotlin.version>
    <trixnity.version>5.2.0</trixnity.version>
    <ktor.version>3.4.1</ktor.version>
    <junit.jupiter.version>6.1.0-M1</junit.jupiter.version>
    <maven.compiler.release>25</maven.compiler.release>
    <kotlin.compiler.jvmTarget>25</kotlin.compiler.jvmTarget>
    <sqlite4clj.rev>8b9234061a033c06438b3a0542d987046abf06db</sqlite4clj.rev>
    <coffi.rev>ae3e38a449c88b998db98b0d4bffa9908dea1c79</coffi.rev>
    <sqlite4clj.gitlib>${env.HOME}/.gitlibs/libs/andersmurphy/sqlite4clj/${sqlite4clj.rev}</sqlite4clj.gitlib>
    <coffi.vendor.jar>${project.basedir}/vendor/coffi/coffi-${coffi.rev}.jar</coffi.vendor.jar>
  </properties>
  <repositories>
    <repository>
      <id>clojars</id>
      <url>https://repo.clojars.org/</url>
    </repository>
  </repositories>
  <dependencies>
    <dependency>
      <groupId>de.connect2x.trixnity</groupId>
      <artifactId>trixnity-client-jvm</artifactId>
      <version>${trixnity.version}</version>
    </dependency>
    <dependency>
      <groupId>de.connect2x.trixnity</groupId>
      <artifactId>trixnity-client-media-okio-jvm</artifactId>
      <version>${trixnity.version}</version>
    </dependency>
    <dependency>
      <groupId>de.connect2x.trixnity</groupId>
      <artifactId>trixnity-client-cryptodriver-vodozemac-jvm</artifactId>
      <version>${trixnity.version}</version>
    </dependency>
    <dependency>
      <groupId>org.clojure</groupId>
      <artifactId>clojure</artifactId>
      <version>1.12.4</version>
    </dependency>
    <dependency>
      <groupId>com.fulcrologic</groupId>
      <artifactId>guardrails</artifactId>
      <version>1.2.16</version>
    </dependency>
    <dependency>
      <groupId>metosin</groupId>
      <artifactId>malli</artifactId>
      <version>0.20.1</version>
    </dependency>
    <dependency>
      <groupId>org.jetbrains.kotlinx</groupId>
      <artifactId>kotlinx-coroutines-core-jvm</artifactId>
      <version>1.10.1</version>
    </dependency>
    <dependency>
      <groupId>org.suskalo</groupId>
      <artifactId>coffi</artifactId>
      <version>${coffi.rev}</version>
      <scope>system</scope>
      <systemPath>${coffi.vendor.jar}</systemPath>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-nop</artifactId>
      <version>2.0.17</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>io.ktor</groupId>
      <artifactId>ktor-client-mock-jvm</artifactId>
      <version>${ktor.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>de.connect2x.trixnity</groupId>
      <artifactId>trixnity-test-utils-jvm</artifactId>
      <version>${trixnity.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.jetbrains.kotlin</groupId>
      <artifactId>kotlin-test-junit5</artifactId>
      <version>${kotlin.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.jetbrains.kotlinx</groupId>
      <artifactId>kotlinx-coroutines-test</artifactId>
      <version>1.10.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit.jupiter.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit.jupiter.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-launcher</artifactId>
      <version>6.1.0-M1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.clojure</groupId>
      <artifactId>core.cache</artifactId>
      <version>1.2.263</version>
    </dependency>
    <dependency>
      <groupId>io.github.tonsky</groupId>
      <artifactId>fast-edn</artifactId>
      <version>1.1.3</version>
    </dependency>
    <dependency>
      <groupId>insn</groupId>
      <artifactId>insn</artifactId>
      <version>0.5.4</version>
    </dependency>
  </dependencies>
  <build>
    <sourceDirectory>${project.basedir}/src/kotlin</sourceDirectory>
    <resources>
      <resource>
        <directory>src/clj</directory>
      </resource>
      <resource>
        <directory>resources</directory>
      </resource>
    </resources>
    <testResources>
      <testResource>
        <directory>${sqlite4clj.gitlib}/src</directory>
      </testResource>
      <testResource>
        <directory>${sqlite4clj.gitlib}/resources</directory>
      </testResource>
    </testResources>
    <plugins>
      <plugin>
        <groupId>org.jetbrains.kotlin</groupId>
        <artifactId>kotlin-maven-plugin</artifactId>
        <version>${kotlin.version}</version>
        <executions>
          <execution>
            <id>compile</id>
            <phase>compile</phase>
            <goals>
              <goal>compile</goal>
            </goals>
            <configuration>
              <jvmTarget>${kotlin.compiler.jvmTarget}</jvmTarget>
              <sourceDirs>
                <sourceDir>${project.basedir}/src/kotlin</sourceDir>
              </sourceDirs>
            </configuration>
          </execution>
          <execution>
            <id>test-compile</id>
            <phase>test-compile</phase>
            <goals>
              <goal>test-compile</goal>
            </goals>
            <configuration>
              <jvmTarget>${kotlin.compiler.jvmTarget}</jvmTarget>
              <sourceDirs>
                <sourceDir>${project.basedir}/src/kotlinTest</sourceDir>
                <sourceDir>${project.basedir}/extra/trixnity-client-repository-test/src/commonMain/kotlin</sourceDir>
              </sourceDirs>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>3.5.0</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.15.0</version>
        <configuration>
          <release>${maven.compiler.release}</release>
        </configuration>
        <executions>
          <execution>
            <id>default-compile</id>
            <phase>none</phase>
          </execution>
          <execution>
            <id>default-testCompile</id>
            <phase>none</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.5</version>
        <configuration>
          <argLine>--enable-native-access=ALL-UNNAMED</argLine>
          <useModulePath>false</useModulePath>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
